# ResumeFill-App

./: .gitignore  README.md
backend/: .gitignore  openapiSpec.yml
backend/app/: main.py
backend/app/api/: main.py
database/: notes.md  openapiSpec.yml  pyproject.toml  test_output.txt  todo.md
database/app/: main.py
database/app/core/: config.py  db.py  readme.txt  security.py
database/app/dependencies/: auth_dependencies.py
database/app/middleware/: auth.py
database/app/models/: __init__.py  application_models.py  applications.py  company.py  company_models.py  form.py  job_position_models.py  jwt_models.py  responses.py  user_models.py  users.py
database/app/routers/: application.py  application_routes.py  auth.py  auth_routes.py  company.py  company_routes.py  job_position_routes.py  users.py  users_routes.py
database/app/services/: application_services.py  company_services.py  job_position_services.py  readme.txt  user_services.py
database/database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
database/tests/core/: test_security.py
database/tests/routers/: test_application_routes.py  test_auth.py  test_company.py  test_job_position.py  test_user.py  test_users.py
database/tests/services/: test_application_services.py
resume-fill/: package-lock.json  package.json
resume-fill/app/: layout.tsx
resume-fill/app/api-hooks/: Auth.ts  JobPosition.ts
resume-fill/app/components/: Navbar.tsx  Recommendations.tsx  Sidebar.tsx  SidebarItem.tsx
resume-fill/app/dashboard/: page.tsx
resume-fill/app/intro/: page.tsx
(+14 files in other folders)
