[project]
name = "database"
version = "0.1.0"
description = "Database for resumefill app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.6.6",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "joserfc>=1.6.0",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sqlmodel>=0.0.29",
    "uvicorn>=0.40.0",
]
